src/exporter/snapshots/annatto__exporter__textgrid__tests__customization_no_ignore.snap
---
source: src/exporter/textgrid.rs
expression: export.unwrap()
---
File type = "ooTextFile"
Object class = "TextGrid"

xmin = 0
xmax = 5.55555
tiers? <exists>
size = 5
item []:
    item [1]:
        class = "IntervalTier"
        name = "dipl::dipl"
        xmin = 0
        xmax = 5.55555
        intervals: size = 4
        intervals [1]:
            xmin = 0
            xmax = 2.22222
            text = "I'm"
        intervals [2]:
            xmin = 2.22222
            xmax = 3.33333
            text = "in"
        intervals [3]:
            xmin = 3.33333
            xmax = 4.44444
            text = "New"
        intervals [4]:
            xmin = 4.44444
            xmax = 5.55555
            text = "York"
    item [2]:
        class = "IntervalTier"
        name = "dipl::sentence"
        xmin = 0
        xmax = 5.55555
        intervals: size = 1
        intervals [1]:
            xmin = 0
            xmax = 5.55555
            text = "1"
    item [3]:
        class = "IntervalTier"
        name = "norm::lemma"
        xmin = 0
        xmax = 5.55555
        intervals: size = 4
        intervals [1]:
            xmin = 0
            xmax = 1.11111
            text = "I"
        intervals [2]:
            xmin = 1.11111
            xmax = 2.22222
            text = "be"
        intervals [3]:
            xmin = 2.22222
            xmax = 3.33333
            text = "in"
        intervals [4]:
            xmin = 3.33333
            xmax = 5.55555
            text = "New York"
    item [4]:
        class = "IntervalTier"
        name = "norm::norm"
        xmin = 0
        xmax = 5.55555
        intervals: size = 4
        intervals [1]:
            xmin = 0
            xmax = 1.11111
            text = "I"
        intervals [2]:
            xmin = 1.11111
            xmax = 2.22222
            text = "am"
        intervals [3]:
            xmin = 2.22222
            xmax = 3.33333
            text = "in"
        intervals [4]:
            xmin = 3.33333
            xmax = 5.55555
            text = "New York"
    item [5]:
        class = "IntervalTier"
        name = "norm::pos"
        xmin = 0
        xmax = 5.55555
        intervals: size = 4
        intervals [1]:
            xmin = 0
            xmax = 1.11111
            text = "PRON"
        intervals [2]:
            xmin = 1.11111
            xmax = 2.22222
            text = "VERB"
        intervals [3]:
            xmin = 2.22222
            xmax = 3.33333
            text = "ADP"
        intervals [4]:
            xmin = 3.33333
            xmax = 5.55555
            text = "PRON"


